--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -32,6 +32,10 @@
 @mixin red_btn {
   @include blue_btn();
   background-color: $bg-delete-btn;
+
+  &:hover {
+    background-color: $bg-delete-btn-hover;
+  }
 }
 
 //NAV 
