--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -9,6 +9,7 @@ $bg-top-menu-btn-default: rgb(74, 148, 190);
 $bg-top-menu-btn-hover: rgb(55, 109, 139);
 $bg-top-menu-btn-active: rgb(39, 74, 94);
 $bg-delete-btn: rgb(230, 56, 56);
+$bg-delete-btn-hover: rgb(170, 43, 43);
 $bg-warning-btn:rgb(235, 199, 0);
 
 //--COLORS--
@@ -46,3 +47,7 @@ $breakpoint-xs: 576px;
 $breakpoint-sm: 768px;
 $breakpoint-md: 992px;
 $breakpoint-lg: 1200px;
+
+
+$height-md: 950px; 
+$height-lg: 1080px;
