--- a/src/components/Designer/TopMenu/CentralPanel/CentralPanel.module.scss
+++ b/src/components/Designer/TopMenu/CentralPanel/CentralPanel.module.scss
@@ -22,6 +22,16 @@
       cursor: pointer;
     }
 
+    .flow_name{
+      position: absolute;
+      left: 110px;
+      font-style: italic;
+      font-weight: 400;
+      color: $color-list-label;
+      bottom: 11px;
+
+    }
+
     .server_button {
       position: absolute;
       left: 20px;
