--- a/src/components/Designer/Substitutions/Substitutions.module.scss
+++ b/src/components/Designer/Substitutions/Substitutions.module.scss
@@ -1,114 +1,100 @@
 @import "/src/style/variables.scss";
 @import "/src/style/mixins.scss";
-;
 @import "/src/style/variables.scss";
 @import "/src/style/mixins.scss";
-;
-
 .wrapper {
-    position: relative;
-
-
+  position: relative;
 }
 
 .content {
-    position: absolute;
-    bottom: 40px;
-    z-index: 100;
+  position: absolute;
+  bottom: 0;
+  z-index: 100;
 
-    border: 1px solid rgb(239, 239, 239);
-    margin-left: auto;
-    margin-right: auto;
-    background-color: white;
-    margin-bottom: 0;
-
+  border: 1px solid rgb(239, 239, 239);
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  margin-bottom: 0;
 }
 
 .icon {
-    text-align: center;
-    color: $color-node-nav-icon;
-    margin-bottom: 0;
-    padding-bottom: 0;
+  text-align: center;
+  color: $color-node-nav-icon;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 
 .expandable_content {
+  &.expanded {
+    height: 200px;
+    transition: height 0.3s ease-out;
+  }
 
-    &.expanded {
-        height: 200px;
-        transition: height 0.3s ease-out;
-
-
-    }
-
-    &.collapsed {
-        height: 0;
-        transition: height 0.3s ease-out;
-    }
+  &.collapsed {
+    height: 0;
+    transition: height 0.3s ease-out;
+  }
 }
-
 
 .header {
-    @include section_header;
-    padding-bottom: 0;
-    margin-bottom: 10px;
-    padding-top: 0;
+  @include section_header;
+  padding-bottom: 0;
+  margin-bottom: 10px;
+  padding-top: 0;
 }
 
-
 .sub_header {
+  &.collapsed {
+    display: none;
+  }
 
-    &.collapsed {
-        display: none;
+  font-size: 0.9rem;
+  margin-bottom: 10px;
+  text-align: center;
+
+  ul {
+    display: flex;
+    padding-left: 10px;
+    margin: 0;
+
+    li {
+      list-style: none;
+      margin-right: 20px;
     }
+  }
 
-    font-size: 0.9rem;
-    margin-bottom: 10px;
-    text-align: center;
+  input {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    height: 18px;
+    border: 1px solid rgb(182, 182, 182);
+    outline: none;
+  }
 
-    ul {
-        display: flex;
-        padding-left: 10px;
-        margin: 0;
+  button {
+    background-color: $bg-top-menu-btn-default;
+    color: white;
+    border: 0;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+    cursor: pointer;
+    height: 22px;
+  }
 
-        li {
-            list-style: none;
-            margin-right: 20px;
-        }
-    }
-
-    input {
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
-        height: 18px;
-        border: 1px solid rgb(182, 182, 182);
-        outline: none;
-    }
-
-    button {
-        background-color: $bg-top-menu-btn-default;
-        color: white;
-        border: 0;
-        border-top-right-radius: 3px;
-        border-bottom-right-radius: 3px;
-        cursor: pointer;
-        height: 22px;
-    }
-
-    span {
-        position: absolute;
-        padding-left: 10px;
-        color: red;
-        font-style: italic;
-    }
+  span {
+    position: absolute;
+    padding-left: 10px;
+    color: red;
+    font-style: italic;
+  }
 }
 
 .body {
-
-    height: 120px;
-    overflow-y: auto;
-    padding: 10px;
-    font-size: 0.8rem;
-    background-color: rgb(245, 245, 245);
-    border: 1px solid rgb(231, 231, 231);
-
+  height: 120px;
+  overflow-y: auto;
+  padding: 10px;
+  font-size: 0.8rem;
+  background-color: rgb(245, 245, 245);
+  border: 1px solid rgb(231, 231, 231);
 }
