--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -1,17 +1,14 @@
 @font-face {
     font-family: 'BlockMenuHeader';
-    src: url('../fonts/Rajdhani-Regular.ttf');
-    /* Add other font properties if needed */
+    src: url('../assets/fonts/Rajdhani-Regular.ttf');
 }
 
 @font-face {
     font-family: 'Richard';
-    src: url('../fonts/Inter-Regular.ttf');
-    /* Add other font properties if needed */
+    src: url('../assets/fonts/Inter-Regular.ttf');
 }
 
 @font-face {
     font-family: 'Inter';
-    src: url('../fonts/Inter-VariableFont_slnt\,wght.ttf');
-    /* Add other font properties if needed */
+    src: url('../assets/fonts/Inter-VariableFont_slnt\,wght.ttf');
 }
