--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -1,469 +1,11 @@
 @import "./variables.scss";
+@import "./mixins_elements/buttons.scss";
+@import "./mixins_elements/modal_windows.scss";
+@import "./mixins_elements/tables.scss";
+@import "./mixins_elements/lists.scss";
+@import "./mixins_elements/wrappers.scss";
+@import "./mixins_elements/inputs.scss";
+@import "./mixins_elements/texts.scss";
+@import "./mixins_elements/icons.scss";
 
-//MESSAGES
-@mixin error_message {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #ffcccc;
-  padding: 10px 20px;
-  border: 1px solid #ff0000;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
 
-//BUTTONS
-@mixin blue_btn {
-  background-color: $bg-top-menu-btn-default;
-  padding: 5px 10px;
-  border: 0;
-  border-radius: 5px;
-  color: white;
-  cursor: pointer;
-
-  &:hover {
-    background-color: $bg-top-menu-btn-hover;
-  }
-
-  transition: background-color 0.2s ease-in-out;
-}
-
-@mixin red_btn {
-  @include blue_btn();
-  background-color: $bg-delete-btn;
-
-  &:hover {
-    background-color: $bg-delete-btn-hover;
-  }
-}
-
-//NAV 
-@mixin nav_wrapper {
-
-  background-color: $bg-top-menu-btn-default;
-  display: grid;
-  grid-template-columns: repeat(3, 4fr);
-  align-items: center;
-}
-
-@mixin nav_right_section{
-  display: flex;
-    height: 100%;
-    align-items: center; 
-    justify-self: right;
-    justify-items:flex-start;
-    z-index: 1000;
-}
-
-//Left Panel
-@mixin left_panel_btn($bg) {
-
-  width: 100%;
-  height: 40px;
-  border: 0;
-  background-color: $bg;
-  color: $color-node-nav-btn;
-
-  font-size: 0.9rem;
-  border-bottom: 1px solid rgb(219, 219, 219);
-  text-align: left;
-  padding-left: 60px;
-  cursor: pointer;
-
-  &:hover {
-    background-color: darken($color: $bg, $amount: 10%);
-  }
-
-  transition: background-color 0.3s ease;
-}
-
-//Right Panel
-@mixin section_header {
-  padding-top: 15px;
-  color: $color-node-nav-container-header;
-
-  margin-bottom: 15px;
-  text-align: center;
-}
-
-@mixin section_container {
-  h5 {
-    color: $color-node-nav-container-header;
-    background-color: $bg-node-nav-btn;
-    margin: 0;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    padding-left: 10px;
-
-  }
-
-  ul {
-    padding: 0;
-    margin: 0;
-  }
-
-  li {
-    display: grid;
-    grid-template-columns: 120px auto;
-    border-bottom: 1px solid rgb(238, 238, 238);
-    list-style: none;
-    height: 40px;
-
-    input {
-      border: 0;
-      outline: none;
-      max-width: auto;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    input,
-    label {
-      padding-left: 10px;
-      font-size: 0.8rem;
-    }
-
-
-
-    label {
-      color: $color-node-nav-container-header;
-      max-width: 90px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-
-      &:hover {
-        background-color: $bg-node-nav-btn;
-      }
-
-      transition: background-color 0.3s ease-in-out;
-
-    }
-
-    input[type="text"] {
-      width: 100%;
-    }
-
-    input[type="color"] {
-      border: 0;
-      border-radius: 50%;
-      margin-top: auto;
-      margin-bottom: auto;
-
-    }
-
-    input[type="radio"] {
-      width: 100%;
-    }
-
-    input[type="checkbox"] {
-      margin-top: auto;
-      margin-bottom: auto;
-      height: 20px;
-      margin-left: 10px;
-    }
-
-  }
-}
-
-//Right Panel Props
-
-@mixin section_grid_item {
-  border-right: 1px solid rgb(238, 238, 238);
-  height: 40px;
-  display: flex;
-  align-items: center;
-}
-
-@mixin server_table {
-  width: 100%;
-  border-collapse: collapse;
-
-  @media screen and (max-width: $breakpoint-md) {
-    font-size: 0.8rem;
-    word-break: break-all;
-  }
-
-  thead {
-
-    position: sticky;
-    top: 0;
-    background-color: #f1f1f1;
-    z-index: 1;
-
-    tr {
-      text-align: center;
-      background-color: $bg-node-nav-btn;
-
-      height: 40px;
-
-      th {
-        color: $color-font-main;
-        font-weight: $font-weight-bold;
-        font-style: italic;
-
-      }
-    }
-  }
-
-  tbody {
-
-
-    td {
-      border: 1px solid rgb(235, 235, 235);
-      width: 50%;
-      padding: 10px;
-      background-color: rgb(255, 255, 255);
-      color: gray;
-
-    }
-
-
-  }
-}
-
-//TABLES
-
-//LOADED FLOWS
-
-@mixin loaded_flows_table {
-
-  width: 100%;
-  margin-bottom: 20px;
-  table-layout: table;
-  ;
-
-  thead {
-    font-style: italic;
-
-    th {
-
-      font-size: 0.9rem;
-      font-weight: $font-weight-bold;
-
-    }
-
-    margin-bottom: 20px;
-  }
-
-  tbody {
-    background-color: rgb(247, 247, 247);
-
-    td {
-      height: 30px;
-      padding: 5px;
-      font-size: 0.9rem;
-    }
-
-    .flow_name {
-
-      color: $color-node-nav-icon;
-      font-weight: $font-weight-bolder;
-    }
-
-    .actions_wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-    }
-
-
-  }
-
-}
-
-// User And Group Table
-
-@mixin user_group_table_body {
-  tr {
-    td {
-      text-overflow: ellipsis;
-    }
-
-    .group_members {
-      font-size: 0.9rem;
-    }
-
-    ul {
-      padding: 0;
-
-      li {
-        list-style: none;
-      }
-    }
-  }
-}
-
-@mixin user_group_table_actions_column {
-  display: flex;
-  justify-content: center;
-
-  button {
-    @include blue_btn;
-    margin-left: 5px;
-  }
-
-  .delete_btn {
-    background-color: $bg-delete-btn;
-  }
-
-}
-
-//SERVER
-
-@mixin server_header_btn {
-
-  background-color: white;
-  border: 0;
-  border-radius: 5px;
-  padding: 5px 10px;
-  ;
-  font-weight: $font-weight-bold;
-  color: $color-font-main;
-  cursor: pointer;
-
-  &:hover {
-    background-color: rgb(148, 200, 230);
-  }
-
-  transition: background-color 0.2s ease-in-out;
-
-}
-
-@mixin disabled_input {
-  background-color: rgb(218, 218, 218);
-  padding-left: 5px;
-  font-style: italic;
-  color: gray;
-}
-
-//DROPDOWN
-
-@mixin dropdown_menu {
-  position: absolute;
-  top: 35px;
-  background-color: rgb(255, 255, 255);
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
-  padding: auto;
-  border-radius: 3px;
-
-  ul {
-    padding: 0;
-  }
-
-  li {
-    display: grid;
-    grid-template-columns: 6fr 6fr;
-    padding: 10px;
-    text-align: left;
-    color: black;
-    font-size: 0.9rem;
-
-    &:hover {
-      background-color: lighten($color-node-nav-icon, 55%);
-    }
-
-    transition: background-color 0.3s ease;
-  }
-}
-
-@mixin dropdown_menu_icon {
-  display: flex;
-  justify-content: center;
-  color: $color-node-nav-icon;
-}
-
-@mixin dropdown_menu_section_title {
-  text-align: center;
-  padding: 5px;
-  border-bottom: 1px solid rgb(230, 230, 230);
-  background-color: rgb(245, 245, 245);
-}
-
-
-//SERVER FLOW LIST
-
-@mixin server_flow_list {
- 
-  list-style: none;
-  background-color: $bg-node-nav-btn;
-  padding: 10px 0px 10px 20px;
-  border-bottom: 1px solid rgb(204, 204, 204);
-}
-
-@mixin server_flow_list_item {
-  display: grid;
-  grid-template-columns: 10fr 2fr;
-  height: 40px;
-  align-items: center;
-  padding: 0;
-
-  &.selected {
-    background-color: rgb(179, 179, 179);
-  }
-
-  transition: background-color 0.3s ease-in-out;
-}
-
-@mixin server_flow_list_btn_wrapper {
-  width: 100%;
-  display: flex;
-  justify-content: right;
-  
-  button {
-    margin-right: 5px;
-    background-color: $bg-top-menu-btn-default;
-    color: white;
-    padding: 7px;
-    border: none;
-    z-index: 1000;
-
-  }
-}
-
-//MODAL WINDOWS
-@mixin modal_container {
-  width: 100vw;
-  height: 100vh;
-  z-index: 9999;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: fixed;
-}
-
-@mixin modal_window {
-  padding: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: white;
-  color: rgb(0, 0, 0);
-  z-index: 9999;
-  border-radius: 16px;
-  box-shadow: $shadow-node-nav-container;
-  overflow: wrap;
-  min-width: 400px;
-  min-height: 100px;
-  color: $color-font-main;
-}
-
-@mixin modal_header {
-  text-align: center;
-  font-weight: $font-weight-bolder;
-  margin-bottom: 20px;
-}
-
-@mixin modal_body {
-  margin-bottom: 20px;
-  font-size: 0.9rem;
-}
-
-@mixin modal_form {
-  display: grid;
-  gap: 20px;
-  align-items: start;
-}
