--- a/src/components/PushNotifications/PushNotifications.module.scss
+++ b/src/components/PushNotifications/PushNotifications.module.scss
@@ -2,77 +2,29 @@
 @import "/src/style/variables.scss";
 
 .wrapper {
-
-    .icon_wrapper {
-        position: relative;
-        display: flex;
-        align-items: center;
-        width: 40px;
-        .icon {
-            color: white;
-            cursor: pointer;
-            font-size: 1em;
-            padding-top: 10px;
-
-            &.light {
-                color: white;
-            }
-
-            &.dark {
-                color: $color-node-nav-icon
-            }
-        }
-
-        .badge {
-            position: absolute;
-            left: 10px;
-            bottom: 10px;
-            background-color: red;
-            color: white;
-            border-radius: 50%;
-            padding: 2px 5px;
-            font-size: 10px;
-        }
+  .icon_wrapper {
+    @include notification_icon_wrapper;
+    .icon {
+      @include notification_icon;
     }
-
-
-
-    .notifications_list {
-        position: absolute;
-        top: 50px;
-        right: 75px;
-        border: 1px solid $color-list-border-darker;
-        border-radius: 5px;
-        background-color: white;
-        padding: 20px;
-        width: 400px;
-
-        ul {
-            padding: 0;
-            max-height: 300px;
-            overflow-y: auto;
-        }
-
-        li {
-            list-style: none;
-            border-bottom: 1px solid $color-list-border-darker;
-            display: grid;
-            grid-template-columns: 8fr 4fr;
-            margin-bottom: 10px;
-            padding-bottom: 10px;
-
-            .message {
-                font-style: italic;
-            }
-
-            .date {
-                font-size: 0.7rem;
-            }
-
-        }
-
-        .clear_btn {
-            @include blue_btn;
-        }
+    .badge {
+      @include red_badge_icon;
     }
+  }
+
+  .notifications_list {
+    @include notifications_list;
+
+    .message {
+        font-style: italic;
+      }
+
+      .date {
+        font-size: 0.7rem;
+      }
+
+    .clear_btn {
+      @include blue_btn;
+    }
+  }
 }
