--- a/src/style/mixins_elements/wrappers.scss
+++ b/src/style/mixins_elements/wrappers.scss
@@ -132,9 +132,14 @@
   height: 40px;
   display: flex;
   align-items: center;
+
+  select {
+    border: none;
+    width: 100%;
+  }
 }
 
-@mixin notification_icon_wrapper{
+@mixin notification_icon_wrapper {
   position: relative;
   display: flex;
   align-items: center;
