--- a/src/components/MonacoEditor/MonacoEditor.module.scss
+++ b/src/components/MonacoEditor/MonacoEditor.module.scss
@@ -2,26 +2,22 @@
 @import "style/mixins.scss";
 
 .wrapper {
-
-  .icon_wrapper{
-
-   
+  .icon_wrapper {
     margin-right: 20px;
-   
+    display: flex;
+
     .icon {
       &.light {
         color: white;
       }
-  
+
       &.dark {
         color: $color-node-nav-icon;
       }
       cursor: pointer;
-      font-size: 2em;  
+      font-size: 2em;
     }
-  
   }
-
 
   .editor_wrapper {
     width: 700px;
