--- a/src/style/mixins_elements/buttons.scss
+++ b/src/style/mixins_elements/buttons.scss
@@ -52,6 +52,10 @@
   padding-left: 60px;
   cursor: pointer;
 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
   &:hover {
     background-color: darken($color: $bg, $amount: 10%);
   }
