fixed draft not being loaded from server

--- a/src/components/Designer/TopMenu/DesignerNav.module.scss
+++ b/src/components/Designer/TopMenu/DesignerNav.module.scss
@@ -48,12 +48,9 @@
     }
 
     .right {
-      display: flex;
-      justify-self: end;
-      justify-content: space-between;
+      @include nav_right_section;
     }
   }
-
 
   @media print {
     display: none;
